# rust_course

adder/src/: lib.rs
arrays/src/: main.rs
bank/src/: main.rs
borrowing/src/: main.rs
cons_list/src/: main.rs
deck/src/: main.rs
directories/: Cargo.toml
directories/src/: main.rs
enums/src/: main.rs
error_handling/src/: main.rs
error_propagation/: Cargo.toml
error_propagation/src/: main.rs
exercises/exercise_1/src/: main.rs
external_crate/: Cargo.toml
external_crate/src/: greet.rs  main.rs
files/: created_file.txt
files/src/: main.rs
files_buffering/: Cargo.toml  large_file.txt
files_buffering/src/: main.rs
functions/src/: main.rs
future/src/: main.rs
hello_world/src/: main.rs
iterators/src/: main.rs
lifetimes/src/: main.rs
loops/src/: main.rs
macro_demo/src/: main.rs
maps/src/: main.rs
math_utils/: Cargo.toml  README.md
math_utils/src/: main.rs
mutex/src/: main.rs
operations/src/: main.rs
ownership/src/: main.rs
pastebin/: Cargo.toml  pastes.db
pastebin/migrations/: 0001_create_pastes.sql
pastebin/src/: main.rs
pastebin/uploads/: vt1pNofW
projects/contacts_book/: Cargo.toml
projects/contacts_book/src/: main.rs
projects/github_users_data/: Cargo.toml
projects/grade_calculator/: Cargo.toml
projects/log_analyzer/src/: main.rs
projects/sensors_dashboard/: Cargo.toml
slice/src/: main.rs
strings/src/: main.rs
structs/src/: main.rs
threads/src/: main.rs
tuples/src/: main.rs
user_input/src/: main.rs
using_math_utils/: Cargo.toml
using_math_utils/src/: main.rs
vectors/src/: main.rs
(+7 files in other folders)
