[package]
name = "pastebin"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket ={ version = "0.5.1", features = ["json"]}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1", features = ["derive"] }
nanoid = "0.4"

